k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: server
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: api
                  image: vertigo090/complex-api
                  ports:
                      - containerPort: 5000
