k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: server-cluster-ip-service
                            port:
                                number: 5000
